Fixed spacing of My Work

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body {
   font-family: var(--main-font);
   font-weight: bold;
   color: var(--text-color);
-  padding-top: 150px;
+  margin-top: 200px;
 }
 .subheader {
   font-family: var(--main-font);
@@ -45,12 +45,14 @@ body {
   font-family: var(--main-font);
   font-weight: regular;
   color: var(--seconary-color);
-  margin-top: -30px;
 }
 .weather-app {
   max-width: 300px;
   margin-left: 300px;
-  margin-top: 100px;
+  margin-top: 60px;
   margin-bottom: 30px;
   box-shadow: 15px 15px 0px 1px var(--seconary-color);
+}
+.project-description {
+  margin-top: -30px;
 }
